--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,7 +2,7 @@ name: Climate Monitor
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour
+    - cron: '0 */12 * * *'  # Runs at 00:00 and 12:00 UTC daily (every 12 hours)
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
