--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,8 +2,10 @@ name: Climate Monitor
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Runs at 00:00 and 12:00 UTC daily (every 12 hours)
+    - cron: '0 */10 * * *'  # Runs at 00:00 and 12:00 UTC daily (every 12 hours)
   workflow_dispatch:  # Allows manual trigger
+permissions:
+  contents: write   # 👈 allows commit/push
 
 jobs:
   monitor:
