--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -35,6 +35,8 @@ jobs:
           git config --local user.name "GitHub Action"
           git add seen_articles.json
           git diff --quiet && git diff --staged --quiet || git commit -m "Update seen articles"
+          git push || echo "Nothing to push"
+
           
       - name: Upload logs
         if: always()  # ensures logs get uploaded even if the script errors
